WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286695
[WGSL] Using UINT_MAX for binding triggers a RELEASE_ASSERT
https://bugs.webkit.org/show_bug.cgi?id=286695
Summary
[WGSL] Using UINT_MAX for binding triggers a RELEASE_ASSERT
Tadeu Zagallo
Reported
2025-01-29 11:09:57 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2025-01-29 11:09:59 PST
<
rdar://problem/143741471
>
Tadeu Zagallo
Comment 2
2025-01-29 11:13:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39699
EWS
Comment 3
2025-01-30 10:29:56 PST
Committed
289563@main
(9524c237534b): <
https://commits.webkit.org/289563@main
> Reviewed commits have been landed. Closing PR #39699 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug